# Image-Steganography

./: CMakeLists.txt  Image Steganography.h  Image Steganography.sln  Image Steganography.vcxproj  Image Steganography.vcxproj.filters  README.md  main.cpp  settings.json  settings_template.json
data/: loremIpsum.txt
ext/stb/: stb_image.h  stb_image_write.h
src/: main.cpp  main.h
src/image/: Dither.cpp  Dither.h  Image.cpp  Image.h
src/other/: Log.cpp  Log.h  Txt.cpp  Txt.h
src/process/: Img2Img.cpp  Img2Img.h  Text2Img.cpp  Text2Img.h
src/wrapper/: Image.cpp  Image.h
